# tdscpp

./: CMakeLists.txt  asprintf.c  bjoern-utf8.c  bulk.c  challenge.c  checks.h  config.c  config.h.in  configs.h  convert.c  convert.h  data.c  data.h  des.c  encodings.h  getmac.c  gettimeofday.c  hmac_md5.c  iconv.c  iconv.h  locale.c  log.c  login.c  md4.c  md5.c  mem.c  net.c  newtds-private.h  newtds-test.cpp  newtds.cpp  newtds.h  numeric.c  odbc.h  odbc_data.c  packet.c  poll.c  query.c  random.c  read.c  replacement_iconv.c  (+32 more)
replacements/: poll.h  readpassphrase.h
src/: batch.cpp  bcp.cpp  collation.cpp  colltest.cpp  config.h.in  newtds-test.cpp  ringbuf.cpp  ringbuf.h  rpc.cpp  ssl.cpp  tdscpp-private.h  tdscpp-test.cpp  tdscpp.cpp  tdscpp.h  tdscpp.h.in  tests.cpp  value.cpp  ver100coll.cpp  ver140coll.cpp  ver80coll.cpp  ver90coll.cpp
utils/: bjoern-utf8.h  des.h  hmac_md5.h  md4.h  md5.h  string.h
